--- a/about.html
+++ b/about.html
@@ -51,8 +51,8 @@
     <br />
     <br />
     <div class="container-fluid p-5">
-      <h1>About me</h1>
-      <h3>Front-end developer from Maine, USA</h3>
+      <h1 class="about-me-page">About me</h1>
+      <h3 class="about-me-page">Front-end developer from Maine, USA</h3>
       <br />
       <div class="row">
         <p class="col-sm-12 text-center">
