added seo and alt texts

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
               <p>
                 <img
                   src="images/yoga.png"
-                  alt=""
+                  alt="a lavender colored square with a white rectangle inside. the rectangle contains a picture of a fit, brunette woman with her hands in prayer pose in front of her and one foot is up on the other knee in a yoga position. the right of the picture is the title 'yoga' followed by indescript text and a learn more link. the bottom of the white triangle is a button reading 'go to a yoga class' and 'coded by shecodes'"
                   class="img-fluid border border-5 border-white shadow rounded mx-auto px-0"
                 />
               </p>
@@ -79,7 +79,7 @@
               <p>
                 <img
                   src="images/weather.png"
-                  alt=""
+                  alt="a photo of a clip of a shecodes webpage depicting a weather app. the current weather of lisbon is displayed and the next 5 days of weather is displayed at the botton. the top of the page reads lisbon, paris, sydney, san fransisco and the shecodes logo. the is on a white background that is incased in a lavander square"
                   class="img-fluid border border-5 border-white shadow rounded mx-auto px-0"
                 />
               </p>
@@ -88,7 +88,7 @@
               <p>
                 <img
                   src="images/yogurt.png"
-                  alt=""
+                  alt="a bright magenta pink title reads 'i love yogurt' with a sub title reading especailly greek yogurts. this is followed by a large blue toned picture of a small clear jar of yogurt with blueberries in and around it. under the picture is nondescript text. "
                   class="img-fluid border border-5 border-white shadow rounded mx-auto px-0"
                 />
               </p>
@@ -99,7 +99,11 @@
     </div>
     <div id="contact">
       <h2 class="contact-footer">📮 Contact me</h2>
-      <a href="mailto:blossom.armstrong@gmail.com" class="email-link">
+      <a
+        href="mailto:blossom.armstrong@gmail.com"
+        class="email-link"
+        title="email blossom armstrong"
+      >
         blossom.armstrong@gmail.com
       </a>
     </div>
