--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <title>Blossom Armstrong</title>
+    <title>Blossom Armstrong's grid page practice - via SheCodes</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
 
@@ -60,8 +60,18 @@
     <h1 class="pt-3 pb-1 home-page">Blossom Armstrong</h1>
     <h3>Front-end developer, based in the USA</h3>
     <div class="navigation-links mb-3">
-      <a href="about.html#contact" class="contact-link btn">Contact me</a>
-      <a href="about.html" class="about-link btn">About me</a>
+      <a
+        href="about.html#contact"
+        class="contact-link btn"
+        title="contact Blossom Armstrong"
+        >Contact me</a
+      >
+      <a
+        href="about.html"
+        class="about-link btn"
+        title="about blossom armstrong"
+        >About me</a
+      >
     </div>
     <br />
 
@@ -69,7 +79,7 @@
       <div class="col-sm-6 d-flex">
         <img
           src="images/yoga.png"
-          alt=""
+          alt="a lavender colored square with a white rectangle inside. the rectangle contains a picture of a fit, brunette woman with her hands in prayer pose in front of her and one foot is up on the other knee in a yoga position. the right of the picture is the title 'yoga' followed by indescript text and a learn more link. the bottom of the white triangle is a button reading 'go to a yoga class' and 'coded by shecodes'"
           class="img-fluid max-width: 100% rounded"
         />
       </div>
@@ -87,6 +97,7 @@
             <a
               href="index.html#top-of-page-anchor"
               class="contact-link p-3 mt-1 btn"
+              title="return to top"
               >Launch Yoga App</a
             >
           </div>
@@ -112,6 +123,7 @@
             <a
               href="index.html#top-of-page-anchor"
               class="contact-link p-3 mt-1 btn btn-small-screen-spacing"
+              title="return to top"
               >Launch Weather App</a
             >
           </div>
@@ -120,7 +132,7 @@
       <div class="col-sm-6 d-flex">
         <img
           src="images/weather.png"
-          alt=""
+          alt="a photo of a clip of a shecodes webpage depicting a weather app. the current weather of lisbon is displayed and the next 5 days of weather is displayed at the botton. the top of the page reads lisbon, paris, sydney, san fransisco and the shecodes logo. the is on a white background that is incased in a lavander square"
           class="img-fluid max-width: 100% rounded"
         />
       </div>
@@ -130,7 +142,7 @@
       <div class="col-sm-6 d-flex">
         <img
           src="images/yogurt.png"
-          alt=""
+          alt="a bright magenta pink title reads 'i love yogurt' with a sub title reading especailly greek yogurts. this is followed by a large blue toned picture of a small clear jar of yogurt with blueberries in and around it. under the picture is nondescript text. "
           class="img-fluid max-width: 100% rounded"
         />
       </div>
@@ -147,6 +159,7 @@
             <a
               href="index.html#top-of-page-anchor"
               class="contact-link p-3 mt-1 btn"
+              title="return to top"
               >Launch Yogurt App</a
             >
           </div>
